--- a/HomePage.html
+++ b/HomePage.html
@@ -4,11 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./HomePage.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <div class="navbar">
+            <div id="title">
+                <p><img src="https://www.adidas.co.in/glass/react/98d6566/assets/img/icon-adidas-logo.svg" alt="" srcset=""></p>
+            </div>
+            <div class="underline"></div>
+            <div class="firstNav">
+                <ul>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer"> new releases</a></li>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer">men</a> </li>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer">women</a> </li>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer">kids</a> </li>
+                    <li>|</li>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer">sports</a> </li>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer">brands</a> </li>
+                </ul>
+            </div>
+            <div class="secNav">
+                <ul>
+                    <li><input type="search" placeholder="search">
+                        <button class="sub-but" type="submit" >
+                            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        </button></li>
+                    <li><i class="fa-solid fa-user"></i></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                    <li><i class="fa-solid fa-bars"></i></li>
+                </ul>
+            </div>
+        </div>
+
+            <div class="quote">
+                <h1>Impossible is nothing.</h1>
+                <button class="banner">Find out more</button>
+            </div>
+    </section>
 </body>
 <script src="./HomePage.js"></script>
 </html>
