--- a/HomePage.html
+++ b/HomePage.html
@@ -32,15 +32,17 @@
                         <button class="sub-but" type="submit" >
                             <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-magnifying-glass"></i></a>
                         </button></li>
-                    <li><i class="fa-solid fa-user"></i></li>
-                    <li><i class="fa-solid fa-cart-shopping"></i></li>
-                    <li><i class="fa-solid fa-bars"></i></li>
+                    <li class="icon-link"><a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-user"></i></a> </li>
+                    <li class="icon-link"><a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-cart-shopping"></i></a> </i></li>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-bars"></i></a> </li>
                 </ul>
             </div>
         </div>
 
             <div class="quote">
                 <h1>Impossible is nothing.</h1>
+                <p class="para">STORIES, STYLES AND SPORTSWEAR AT ADIDAS, SINCE 1949. <br><br>
+                    Sport keeps us fit. Keeps you mindful. Brings us together. Through sport we have the power to change lives. Whether it is through stories of inspiring athletes. Helping you to get up and get moving.</p>
                 <button class="banner">Find out more</button>
             </div>
     </section>
