--- a/HomePage.html
+++ b/HomePage.html
@@ -21,7 +21,7 @@
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">men</a> </li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">women</a> </li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">kids</a> </li>
-                    <li>|</li>
+                    <li class="blank">|</li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">sports</a> </li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">brands</a> </li>
                 </ul>
@@ -41,7 +41,7 @@
 
             <div class="quote">
                 <h1>Impossible is nothing.</h1>
-                <p class="para">STORIES, STYLES AND SPORTSWEAR AT ADIDAS, SINCE 1949. <br><br>
+                <p class="para"><br> STORIES, STYLES AND SPORTSWEAR AT ADIDAS, SINCE 1949. <br><br>
                     Sport keeps us fit. Keeps you mindful. Brings us together. Through sport we have the power to change lives. Whether it is through stories of inspiring athletes. Helping you to get up and get moving.</p>
                 <button class="banner">Find out more</button>
             </div>
