--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
         <div class="navbar">
             <div id="title">
-                <p><img src="https://www.adidas.co.in/glass/react/98d6566/assets/img/icon-adidas-logo.svg" alt="" srcset=""></p>
+                <p><img src="./icon-adidas-logo.svg" alt="" srcset=""></p>
             </div>
             <div class="underline"></div>
             <div class="firstNav">
@@ -21,11 +21,12 @@
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">men</a> </li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">women</a> </li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">kids</a> </li>
-                    <li class="blank">|</li>
+                    <li id="blank">|</li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">sports</a> </li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer">brands</a> </li>
                 </ul>
             </div>
+
             <div class="secNav">
                 <ul>
                     <li><input type="search" placeholder="search">
@@ -36,6 +37,29 @@
                     <li class="icon-link"><a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-cart-shopping"></i></a> </i></li>
                     <li><a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-bars"></i></a> </li>
                 </ul>
+            </div>
+
+            <div class="hov">
+                
+                <div class="featured-container">
+
+                </div>
+
+                <div class="group-container">
+                    <div class="foot">
+
+                    </div>
+                    <div class="cloth">
+
+                    </div>
+                    <div class="access">
+
+                    </div>
+                    <div class="sport">
+
+
+                    </div>
+                </div>
             </div>
         </div>
 
